src/snapshots/jjpwrgem__cli__tests__object_missing_value.snap
---
source: src/cli.rs
expression: annotated
---
error: expected json value, found no significant characters
 --> stdin:1:6
  |
1 | {"hi":
  |      ^
  |      |
  |      expected due to `:`
  |
help: insert a placeholder value
  |
1 | {"hi": "rust is a must"
  |        ++++++++++++++++
